--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "homepage": "https://keykeeper.vercel.app",
     "scripts": {
+        "dev": "env-cmd -f .env.development vite",
         "start": "env-cmd -f .env vite",
         "build": "vite build",
         "preview": "vite preview",
